--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -13,7 +13,7 @@
   <button type="button" (click)="share()">share</button>
   <!-- product is a property and notify is a method -->
   <!--[product] - target property in child component  -->
-  <!-- product - source from parent component -->
+  <!-- product (let product of products) - source from parent component -->
   <app-product-alerts
     [product]="product"
     (notify)="onNotify($event)"
